@@ -78,11 +78,12 @@ C_SOURCES=\
 	scroll.c     \
 	seconds.c    \
 	set.c        \
-	setcolor.c   \
-	setcurs.c    \
-	setpos.c     \
-	setposbs.c   \
-	shadow.c     \
+  setcolor.c   \
+  setcurs.c    \
+  setkey.c     \
+  setpos.c     \
+  setposbs.c   \
+  shadow.c     \
 	soundex.c    \
 	space.c      \
 	str.c        \
@@ -130,7 +131,6 @@ PRG_SOURCES=\
 	readkey.prg  \
 	readvar.prg  \
 	setfunc.prg  \
-	setkey.prg   \
 	setta.prg    \
 	tclass.prg   \
 	tbcolumn.prg \
